// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> does not overwrite materialize-css classnames 1`] = `
<Checkbox
  className="my-class"
  filledIn={true}
  id="checkbox_mockId"
  label="red"
  value="red"
>
  <label
    htmlFor="checkbox_mockId"
  >
    <input
      className="filled-in my-class"
      id="checkbox_mockId"
      onChange={[Function]}
      type="checkbox"
      value="red"
    />
    <span>
      red
    </span>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> filled-in 1`] = `
<label
  htmlFor="checkbox_mockId"
>
  <input
    className="filled-in"
    id="checkbox_mockId"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> renders 1`] = `
<Checkbox
  id="checkbox_mockId"
  label="red"
  value="red"
>
  <label
    htmlFor="checkbox_mockId"
  >
    <input
      className=""
      id="checkbox_mockId"
      onChange={[Function]}
      type="checkbox"
      value="red"
    />
    <span>
      red
    </span>
  </label>
</Checkbox>
`;

exports[`<Checkbox /> renders disabled 1`] = `
<label
  htmlFor="checkbox_mockId"
>
  <input
    className=""
    disabled={true}
    id="checkbox_mockId"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;

exports[`<Checkbox /> with id 1`] = `
<label
  htmlFor="test"
>
  <input
    className=""
    id="test"
    onChange={[Function]}
    type="checkbox"
    value="red"
  />
  <span>
    red
  </span>
</label>
`;
